--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,141 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+body{
+ background-color: rgb(255,253,208);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.navbar {
+ display: grid;
+ grid-template-columns: 1fr 1fr 1fr 12fr;
+ /* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6'); */
+ font-family: 'Josefin Sans', sans-serif;
+ background-color: black;
+ color: white;
+}
+.Vnavbar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  font-family: 'Josefin Sans', sans-serif;
+  background-color: black;
+  padding-left: 150px;
+  color: white;
+ }
+.navbarList {
+ font-size: 20px;
+ padding: 20px;
+ color: white;
+ font-weight: bold;
+ font-family: 'Josefin Sans', sans-serif;
+ padding-right: 15px;
+ padding-left: 15px;
+}
+.navBar{
+display: grid;
+background-color: #2c3e50;
+/* background-image: url('https://images6.alphacoders.com/323/thumb-1920-323997.jpg(341 kB)'); */
+grid-template-columns: repeat(3, 1fr);
+background-color: black;
+padding-right: 15px;
+padding-left: 15px;
+height: 50px;
+}
+.navbarChild{
+display: grid;
+align-content: center;
+color: #ecf0f1;
+height: 100%;
+}
+.NavBarMyProfile{
+color: black;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+list-style: none;
+text-decoration: none;
+font-family: 'Josefin Sans', sans-serif;
+display: flex;
+position: relative;
+}
+.NavBarMyProfile .sideBar{
+position: fixed;
+width: 200px;
+height: 100%;
+/* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6'); */
+/* background-color: blue; */
+padding: 30px 0;
+background-color: black;
+margin-top: 0vh;
+color: #fff;
+}
+.NavBarMyProfile{
+position: absolute;
+}
+.sideBar{
+position: relative;
+}
+.headerProfile{
+text-transform: uppercase;
+color: #fff;
+margin-bottom: 30px;
+}
+.sideBar .NavBarChildProfile{
+padding: 25px;
+border-bottom: 1px solid rgba(0,0,0, 0.5);
+border-top: 1px solid rgba(225,225,225, 0.5);
+}
+.sideBar .NavBarChildProfile a{
+color: #bdb8d7;
+display: block;
+}
+.sideBar .NavBarChildProfile .fas{
+width: 40x;
+}
+.sideBar .NavBarChildProfile:hover {
+background-color: #594f8d;
+}
+.pop{
+position: absolute;
+/* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6'); */
+text-align: left;
+background-color: rgb(255,253,208);
+justify-content: center;
+height: 200px;
+width: 178vh;
+margin-left: 14.5%;
+margin-top: 0%;
+/* border: 5px solid gray; */
+font-family: 'Josefin Sans', sans-serif;
+color:black;
+font-size: 40px;
+}
+.popEditChild{
+display: inline-block;
+padding-right: 0px;
+padding-left: 0px;
+}
+.PopMyFriends{
+background: #fff;
+margin-top: 3%;
+width: 200px;
+height: 100px;
+}
+.col-md-6{
+display: grid;
+grid-template-rows: repeat(2, 1fr);
+}
+.inputLogin{
+width: 700px;
+}
+.postYourGame{
+ /* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6'); */
+ /* border: 5px solid gray; */
+ color: black;
+ background-color: rgb(255,253,208);
+ font-family: 'Josefin Sans', sans-serif;
+}
+@keyframes App-logo-spin {
+from {
+  transform: rotate(0deg);
+}
+to {
+  transform: rotate(360deg);
+}
 }
