--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .navbar {
   background-color: #0A1612;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 12fr;
+  grid-template-columns: 1fr 1fr 2fr 1fr 12fr;
 }
 .navbarList {
   font-size: 20px;
