--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-.navbar {
+#post {
+  width: 600px;
+  margin-left: 26%;
+  margin-top: 10px;
+}
+
+/* .navbar {
   background-color: #0A1612;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 1fr 12fr;
@@ -21,6 +27,211 @@
 #eachpost{
   background: blue;
   padding: 20px;
+} */
 
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+.navbar {
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 12fr;
+/* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6(23 kB)
+https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6
+'); */
+font-family: 'Josefin Sans', sans-serif;
+background-color: black;
+color: white;
 }
+.Vnavbar {
+ display: grid;
+ grid-template-columns: 1fr 1fr 1fr ;
+ font-family: 'Josefin Sans', sans-serif;
+ background-color: black;
+ padding-left: 150px;
+ color: white;
+}
+.navbarList {
+font-size: 20px;
+padding: 20px;
+color: white;
+font-weight: bold;
+font-family: 'Josefin Sans', sans-serif;
+padding-right: 15px;
+padding-left: 15px;
+}
+.navBar{
+display: grid;
+background-color: #2c3e50;
+/* background-image: url('https://images6.alphacoders.com/323/thumb-1920-323997.jpg(341 kB)
+https://images6.alphacoders.com/323/thumb-1920-323997.jpg
+(341 kB)'); */
+grid-template-columns: repeat(3, 1fr);
+background-color: black;
+padding-right: 15px;
+padding-left: 15px;
+height: 50px;
+}
+.navbarChild{
+display: grid;
+align-content: center;
+color: #ecf0f1;
+height: 100%;
+}
+.NavBarMyProfile{
+color: black;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+list-style: none;
+text-decoration: none;
+font-family: 'Josefin Sans', sans-serif;
+display: flex;
+position: relative;
+}
+.NavBarMyProfile .sideBar{
+position: fixed;
+width: 200px;
+height: 100%;
+/* background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6(23 kB)
+https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6
+'); */
+/* background-color: blue; */
+padding: 30px 0;
+background-color: black;
+margin-top: 0vh;
+color: #fff;
+}
+.NavBarMyProfile{
+position: absolute;
+}
+.sideBar{
+position: relative;
+}
+.headerProfile{
+text-transform: uppercase;
+color: #fff;
+margin-bottom: 30px;
+}
+.sideBar .NavBarChildProfile{
+padding: 25px;
+border-bottom: 1px solid rgba(0,0,0, 0.5);
+border-top: 1px solid rgba(225,225,225, 0.5);
+}
+.sideBar .NavBarChildProfile a{
+color: #bdb8d7;
+display: block;
+}
+.sideBar .NavBarChildProfile .fas{
+width: 40x;
+}
+.sideBar .NavBarChildProfile:hover {
+background-color: #594f8d;
+}
+/* .pop{
+position: absolute;
+background-image: url('https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6(23 kB)
+https://us.123rf.com/450wm/darksoul72/darksoul721811/darksoul72181100165/111612131-texture-of-the-night-sky-star-abstraction-on-a-black-background.jpg?ver=6
+');
+text-align: left;
+background-color: rgb(255,253,208);
+justify-content: center;
+height: 200px;
+width: 178vh;
+margin-left: 14.5%;
+margin-top: 0%;
+border: 5px solid gray;
+font-family: 'Josefin Sans', sans-serif;
+color:black;
+font-size: 40px;
+} */
+/* .popEditChild{
+display: inline-block;
+padding-right: 0px;
+padding-left: 0px;
+}
+.PopMyFriends{
+background: #fff;
+margin-top: 3%;
+width: 200px;
+height: 100px;
+} */
+.fas{
+  font-size: 40px;
+  margin-left:-80px;
+  margin-bottom: 44px;
+  display: inline-block;
+ }
+.pop{
+position: absolute;
+margin-left: 40%;
+}
+.col-md-6{
+display: grid;
+grid-template-rows: repeat(2, 1fr);
+}
+.inputLogin{
+width: 700px;
+}
+.g1{
+ font-size: 20px;
+ padding: 10px;
+}
+.containerPost{
+margin-top: 20px;
+ display: grid;
+ grid-template-columns: repeat(3, 0.5fr);
+ grid-template-rows: repeat(3, 0.5fr);
+ font-family: 'Josefin Sans', sans-serif;
+ /* font-size: 20px; */
+}
+.allGames{
+ font-family: 'Josefin Sans', sans-serif;
+ font-size: 100px;
+ margin-left: 27%;
+ margin-top: 50px;
+ margin-bottom: 30px;
+ padding: 10px;
+}
+.headerGame{
+ color:black;
+}
+.postYourGame{
+/* border: 5px solid gray; */
+color: black;
+background-color: rgb(255,253,208);
+font-family: 'Josefin Sans', sans-serif;
+}
+#visitors-input{
+ /* grid-template-rows: 1fr; */
+ display: inline-block;
+ margin-left: 16%;
+}
+#visitors-input-child{
+ /* display: grid; */
+ display: inline-block;
+ padding-left: 10px;
+ /* margin-left: 40px; */
+ margin-top:10px;
+}
+#visHeader{
+ color: blue;
+ font-family: 'Josefin Sans', sans-serif;
+ text-align: center;
+ font-size: 20px;
+}
+@keyframes App-logo-spin {
+from {
+ transform: rotate(0deg);
+}
+to {
+ transform: rotate(360deg);
+}
+}
+.verticalNavbarContainer{
+  height: 100vh;
+  background-color:#1b1c1d;
+  width:150px;
+  grid-column: 1/1;
+ }
+ .customSegment{
+  margin-bottom: 0 !important;
+  border-radius: 0 !important;
+ }
